@startuml
'https://plantuml.com/class-diagram

abstract class AbstractFlyingObject
{
    # locationX:int
    # locationY:int
    # speedX:int
    # speedY:int
    # image:BufferedImage
    # width:int
    # height:int
    # isValid:boolean

    + AbstractFlyingObject(int locationX, int locationY, int speedX, int speedY)
    + forward():void
    + crash(AbstractFlyingObject flyingObject):boolean
    + setLocation(double locationX, double locationY):void
    + getLocationX():int
    + getLocationY():int
    + getSpeedX():int
    + getSpeedY():int
    + getImage():BufferedImage
    + getWidth():int
    + getHeight():int
    + notValid():boolean
    + vanish():void
}
abstract class AbstractAircraft
{
	# maxHp:int
    # hp:int
    # score:int
    + AbstractAircraft(int locationX, int locationY, int speedX, int speedY, int hp)
    + decreaseHp(int decrease):void
    + increaseHp(int increase):void
    + getHp():int
    + getScore():int
    + {abstract} shoot():List<BaseBullet>
    + setStrategy(Strategy strategy):void
    + executeStrategy(AbstractAircraft abstractAircraft):List<BaseBullet>
 }

abstract class AbstractEnemy
{
    # hp:int
    # score:int
    + AbstractEnemy(int locationX, int locationY, int speedX, int speedY, int hp)
    + decreaseHp(int decrease):void
    + getScore():int
    + {abstract} shoot():List<BaseBullet>
    + {abstract} propDrop(List<BaseProp> props, AbstractEnemy eliteEnemy):List<BaseProp>
}
AbstractAircraft <|-- AbstractEnemy

class HeroAircraft {
    - {static} instance:HeroAircraft
    - shootNum:int
    - power:int
    - direction:int
    - HeroAircraft(int locationX, int locationY, int speedX, int speedY, int hp, int score)
    + {static} getInstance():HeroAircraft
    + forward():void
    + shoot():List<BaseBullet>
}

AbstractAircraft <|-- HeroAircraft

class MobEnemy {
    - score:int
    + MobEnemy(int locationX, int locationY, int speedX, int speedY, int hp, int score)
    + forward():void
    + shoot():List<BaseBullet>
    + executeStrategy(AbstractAircraft abstractAircraft):List<BaseBullet>
    + bombUpdate():int
}
AbstractEnemy <|-- MobEnemy

class EliteEnemy {
    - score:int
    + EliteEnemy(int locationX, int locationY, int speedX, int speedY, int hp, int score)
    + forward():void
    + shoot():List<BaseBullet>
    + executeStrategy(AbstractAircraft abstractAircraft):List<BaseBullet>
    + bombUpdate():int
}
AbstractEnemy <|-- EliteEnemy

class ElitePlusEnemy {
    - score:int
    + ElitePlusEnemy(int locationX, int locationY, int speedX, int speedY, int hp, int score)
    + forward():void
    + shoot():List<BaseBullet>
    + executeStrategy(AbstractAircraft abstractAircraft):List<BaseBullet>
    + bombUpdate():int
}
AbstractEnemy <|-- ElitePlusEnemy

class BossEnemy {
    - score:int
    + BossEnemy(int locationX, int locationY, int speedX, int speedY, int hp, int score)
    + forward():void
    + shoot():List<BaseBullet>
    + executeStrategy(AbstractAircraft abstractAircraft):List<BaseBullet>
    + bombUpdate():int
}
AbstractEnemy <|-- BossEnemy

abstract class BaseBullet
{
    - power:int
    + BaseBullet(int locationX, int locationY, int speedX, int speedY, int power)
    + forward():void
	+ getPower():int
	+ {abstract} bombUpdate():int
}

class HeroBullet {
    + HeroBullet(int locationX, int locationY,
     int speedX, int speedY, int power)
    + bombUpdate():int
}

class EnemyBullet {
    + EnemyBullet(int locationX, int locationY,
     int speedX, int speedY, int power)
    + bombUpdate():int
}

BaseBullet <|-- HeroBullet
BaseBullet <|-- EnemyBullet

AbstractFlyingObject <|-- AbstractAircraft
AbstractFlyingObject <|-- BaseBullet

abstract class BaseProp {
    + BaseProp(int locationX, int locationY, int speedX, int speedY)
    + forward():void
    + {abstract} effect(List<AbstractEnemy> enemyAircrafts, List<BaseBullet> enemyBullets):int
}

class PropBlood {
    - hp:int
    + PropBlood(int locationX, int locationY,
      int speedX, int speedY, int hp)
    + getHp():int
    + effect(List<AbstractEnemy> enemyAircrafts, List<BaseBullet> enemyBullets):int
}

class PropBomb {
    + PropBomb(int locationX, int locationY,
      int speedX, int speedY)
    + effect(List<AbstractEnemy> enemyAircrafts, List<BaseBullet> enemyBullets):int
}

class PropBullet {
    + PropBullet(int locationX, int locationY,
      int speedX, int speedY)
    + effect(List<AbstractEnemy> enemyAircrafts, List<BaseBullet> enemyBullets):int
}

BaseProp <|-- PropBlood
BaseProp <|-- PropBomb
BaseProp <|-- PropBullet

AbstractFlyingObject <|-- BaseProp

@enduml